--- a/SmallAreaFlowComp/SmallAreaFlowComp/SmallAreaFlowComp.csproj
+++ b/SmallAreaFlowComp/SmallAreaFlowComp/SmallAreaFlowComp.csproj
@@ -7,6 +7,7 @@
     <PublishSingleFile>true</PublishSingleFile>
     <SelfContained>true</SelfContained>
     <Nullable>enable</Nullable>
+    <PublishTrimmed>true</PublishTrimmed>
   </PropertyGroup>
 
 </Project>
