--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,17 @@
 name: build and test
 on:
   push:
+    tags-ignore:
+      - '**'
   pull_request:
     branches: [ main ]
     paths-ignore:
     - 'README.md'
     - 'LICENSE'
+
 env:
   DOTNET_VERSION: '7.0.x'
+  
 jobs:
   build-and-test:
     name: build-and-test-${{matrix.os}}
