--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,11 +11,13 @@ on:
 
 env:
   DOTNET_VERSION: '7.0.x'
-  
+
 jobs:
   build-and-test:
     name: build-and-test-${{matrix.os}}
     runs-on: ${{ matrix.os }}
+    permissions:
+      contents: write    
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
