Updates permissions for release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,8 @@ jobs:
   publish:
     name: release-${{matrix.os}}
     runs-on: ${{ matrix.os }}
+    permissions:
+        contents: write    
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
