--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,13 +9,10 @@ env:
 
 jobs:
   publish:
-    name: release-${{matrix.os}}
-    runs-on: ${{ matrix.os }}
+    name: release
+    runs-on: ubuntu-latest
     permissions:
         contents: write    
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
@@ -32,26 +29,34 @@ jobs:
     - name: Test
       run: dotnet test --no-restore --verbosity normal ./SmallAreaFlowComp/SmallAreaFlowComp.sln
 
-    - name: Publish linux
-      run: dotnet publish --configuration Release --no-build --verbosity normal --self-contained --output ./artifacts/linux-x64 ./SmallAreaFlowComp/SmallAreaFlowComp.sln
-      if: matrix.os == 'ubuntu-latest'
+    - name: Publish linux-x64
+      run: |
+        dotnet publish --configuration Release --no-build --verbosity normal -r linux-x64 --self-contained --output ./artifacts/linux-x64 ./SmallAreaFlowComp/SmallAreaFlowComp.sln
+        zip -r artifacts/linux-x64.zip artifacts/linux-x64
 
-    - name: Publish windows
-      run: dotnet publish --configuration Release --no-build --verbosity normal --self-contained --output ./artifacts/win-x64 ./SmallAreaFlowComp/SmallAreaFlowComp.sln
-      if: matrix.os == 'windows-latest'
+    - name: Publish win-x64
+      run: |
+        dotnet publish --configuration Release --no-build --verbosity normal -r win-x64 --self-contained --output ./artifacts/win-x64 ./SmallAreaFlowComp/SmallAreaFlowComp.sln
+        zip -r artifacts/win-x64.zip artifacts/win-x64
 
-    - name: Publish macOS
-      run: dotnet publish --configuration Release --no-build --verbosity normal --self-contained --output ./artifacts/macos-x64 ./SmallAreaFlowComp/SmallAreaFlowComp.sln
-      if: matrix.os == 'macOS-latest'
+    - name: Publish osx-x64
+      run: |
+        dotnet publish --configuration Release --no-build --verbosity normal -r osx-x64 --self-contained --output ./artifacts/osx-x64 ./SmallAreaFlowComp/SmallAreaFlowComp.sln
+        zip -r artifacts/osx-x64.zip artifacts/osx-x64
+
+    - name: Publish osx-arm64
+      run: |
+        dotnet publish --configuration Release --no-build --verbosity normal -r osx-arm64 --self-contained --output ./artifacts/osx-arm64 ./SmallAreaFlowComp/SmallAreaFlowComp.sln
+        zip -r artifacts/osx-arm64.zip artifacts/osx-arm64
 
     - name: Artifacts
       uses: actions/upload-artifact@v3
       with:
         name: artifacts
-        path: artifacts/**/*
+        path: artifacts/*.zip
 
     - name: Release
       uses: softprops/action-gh-release@v1
       with:
         files: |
-          ./artifacts/*
+          ./artifacts/*.zip
