--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,22 +32,22 @@ jobs:
     - name: Publish linux-x64
       run: |
         dotnet publish --configuration Release --verbosity normal -r linux-x64 --self-contained --output ./artifacts/linux-x64 ./SmallAreaFlowComp/SmallAreaFlowComp.sln
-        zip -r artifacts/linux-x64.zip artifacts/linux-x64
+        zip -r artifacts/SmallAreaFlowComp-linux-${{ github.ref_name }}-x64.zip artifacts/linux-x64
 
     - name: Publish win-x64
       run: |
         dotnet publish --configuration Release --verbosity normal -r win-x64 --self-contained --output ./artifacts/win-x64 ./SmallAreaFlowComp/SmallAreaFlowComp.sln
-        zip -r artifacts/win-x64.zip artifacts/win-x64
+        zip -r artifacts/SmallAreaFlowComp-${{ github.ref_name }}-win-x64.zip artifacts/win-x64
 
     - name: Publish osx-x64
       run: |
         dotnet publish --configuration Release --verbosity normal -r osx-x64 --self-contained --output ./artifacts/osx-x64 ./SmallAreaFlowComp/SmallAreaFlowComp.sln
-        zip -r artifacts/osx-x64.zip artifacts/osx-x64
+        zip -r artifacts/SmallAreaFlowComp-${{ github.ref_name }}-osx-x64.zip artifacts/osx-x64
 
     - name: Publish osx-arm64
       run: |
         dotnet publish --configuration Release --verbosity normal -r osx-arm64 --self-contained --output ./artifacts/osx-arm64 ./SmallAreaFlowComp/SmallAreaFlowComp.sln
-        zip -r artifacts/osx-arm64.zip artifacts/osx-arm64
+        zip -r artifacts/SmallAreaFlowComp-${{ github.ref_name }}-osx-arm64.zip artifacts/osx-arm64
 
     - name: Artifacts
       uses: actions/upload-artifact@v3
