Fixes setting OUTPUT_NAME

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,31 +31,31 @@ jobs:
 
     - name: Publish linux-x64
       run: |
-        dotnet publish --configuration Release --verbosity normal -r linux-x64 --self-contained --output ./artifacts/$OUTPUT_NAME ./SmallAreaFlowComp/SmallAreaFlowComp.sln
-        zip -r artifacts/$OUTPUT_NAME.zip artifacts/$OUTPUT_NAME
-        env:
-            OUTPUT_NAME: SmallAreaFlowComp-${{ github.ref_name }}-linux-x64
+        dotnet publish --configuration Release --verbosity normal -r linux-x64 --self-contained --output ./artifacts/${{ env.OUTPUT_NAME }} ./SmallAreaFlowComp/SmallAreaFlowComp.sln
+        zip -r artifacts/$OUTPUT_NAME.zip artifacts/${{ env.OUTPUT_NAME }}
+      env:
+        OUTPUT_NAME: SmallAreaFlowComp-${{ github.ref_name }}-linux-x64
 
     - name: Publish win-x64
       run: |
-        dotnet publish --configuration Release --verbosity normal -r win-x64 --self-contained --output ./artifacts/$OUTPUT_NAME ./SmallAreaFlowComp/SmallAreaFlowComp.sln
-        zip -r artifacts/$OUTPUT_NAME.zip artifacts/$OUTPUT_NAME
-        env:
-            OUTPUT_NAME: SmallAreaFlowComp-${{ github.ref_name }}-win-x64
+        dotnet publish --configuration Release --verbosity normal -r win-x64 --self-contained --output ./artifacts/${{ env.OUTPUT_NAME }} ./SmallAreaFlowComp/SmallAreaFlowComp.sln
+        zip -r artifacts/$OUTPUT_NAME.zip artifacts/${{ env.OUTPUT_NAME }}
+      env:
+          OUTPUT_NAME: SmallAreaFlowComp-${{ github.ref_name }}-win-x64
 
     - name: Publish osx-x64
       run: |
-        dotnet publish --configuration Release --verbosity normal -r osx-x64 --self-contained --output ./artifacts/$OUTPUT_NAME ./SmallAreaFlowComp/SmallAreaFlowComp.sln
-        zip -r artifacts/$OUTPUT_NAME.zip artifacts/$OUTPUT_NAME
-        env:
-            OUTPUT_NAME: SmallAreaFlowComp-${{ github.ref_name }}-osx-x64
+        dotnet publish --configuration Release --verbosity normal -r osx-x64 --self-contained --output ./artifacts/${{ env.OUTPUT_NAME }} ./SmallAreaFlowComp/SmallAreaFlowComp.sln
+        zip -r artifacts/$OUTPUT_NAME.zip artifacts/${{ env.OUTPUT_NAME }}
+      env:
+          OUTPUT_NAME: SmallAreaFlowComp-${{ github.ref_name }}-osx-x64
 
     - name: Publish osx-arm64
       run: |
-        dotnet publish --configuration Release --verbosity normal -r osx-arm64 --self-contained --output ./artifacts/$OUTPUT_NAME ./SmallAreaFlowComp/SmallAreaFlowComp.sln
-        zip -r artifacts/$OUTPUT_NAME.zip artifacts/$OUTPUT_NAME
-        env:
-            OUTPUT_NAME: SmallAreaFlowComp-${{ github.ref_name }}-osx-arm64
+        dotnet publish --configuration Release --verbosity normal -r osx-arm64 --self-contained --output ./artifacts/${{ env.OUTPUT_NAME }} ./SmallAreaFlowComp/SmallAreaFlowComp.sln
+        zip -r artifacts/$OUTPUT_NAME.zip artifacts/${{ env.OUTPUT_NAME }}
+      env:
+          OUTPUT_NAME: SmallAreaFlowComp-${{ github.ref_name }}-osx-arm64
 
     - name: Artifacts
       uses: actions/upload-artifact@v3
