--- a/SmallAreaFlowComp/SmallAreaFlowComp/SmallAreaFlowComp.csproj
+++ b/SmallAreaFlowComp/SmallAreaFlowComp/SmallAreaFlowComp.csproj
@@ -10,4 +10,8 @@
     <PublishTrimmed>true</PublishTrimmed>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
